# http-server

./: .gitignore  CMakeLists.txt  CORE_ARCHITECTURE.md  Dockerfile  README.md  context.md  docker-compose.yml  http-server-operational-flow.md  http-server-prd.md  http-server-trd.md
include/: ConcurrentQueue.h  Connection.h  EpollServer.h  FtpHandler.h  HttpHandler.h  HttpParser.h  ImapHandler.h  LRUCache.h  Metrics.h  ProtocolHandler.h  RateLimiter.h  Request.h  Response.h  Router.h  SmtpHandler.h  ThreadPool.h  WorkerPool.h
public/: app.js  index.html  large.txt
public/css/: style.css
scripts/: gen_cert.sh
src/: EpollServer.cpp  FtpHandler.cpp  HttpHandler.cpp  HttpParser.cpp  ImapHandler.cpp  Response.cpp  Router.cpp  SmtpHandler.cpp  ThreadPool.cpp  WorkerPool.cpp  main.cpp
tests/e2e/: dashboard.spec.js  package-lock.json  package.json
tests/e2e/test-results/: .last-run.json
tests/e2e/test-results/dashboard-Multi-Protocol-D-00292--have-chaos-sandbox-buttons/: error-context.md
tests/e2e/test-results/dashboard-Multi-Protocol-D-647f4-oad-the-dashboard-correctly/: error-context.md
tests/performance/: load_test.js
tests/traffic/: traffic_generator.py
tests/unit/: app.test.js  package-lock.json  package.json
